# Backend/src/main/kotlin/com/cmg/SpringKotlinBowling/JsonApiModels/NoIdDataFrame.kt
@@ -1,0 +1,6 @@
+package com.cmg.SpringKotlinBowling.JsonApiModels
+
+class NoIdDataFrame {
+    val type = "Frame"
+    var attributes = AttributesFrame()
+}
