# Backend/src/main/kotlin/com/cmg/SpringKotlinBowling/serverReponses/responses.kt
@@ -43,17 +43,17 @@ fun positiveRollResponse(roll: Roll) : ResponseEntity<Any> {
 fun negativeRollResponse(rollValue: Int) : ResponseEntity<Any> {
     val httpHeaders = HttpHeaders()
     val errorTemplate = ErrorTemplate()
-    errorTemplate.data.attributes.code = "403"
-    errorTemplate.data.attributes.description = "403 FORBIDDEN: roll with value $rollValue is not acceptable"
-    return ResponseEntity.status(HttpStatus.FORBIDDEN).headers(httpHeaders).body(errorTemplate)
+    errorTemplate.data.attributes.code = "400"
+    errorTemplate.data.attributes.description = "400 BAD REQUEST: roll with value $rollValue is not acceptable"
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).headers(httpHeaders).body(errorTemplate)
 }
 
 fun gameEndsReponse() : ResponseEntity<Any> {
     val httpHeaders = HttpHeaders()
     val errorTemplate = ErrorTemplate()
-    errorTemplate.data.attributes.code = "403"
-    errorTemplate.data.attributes.description = "403 FORBIDDEN: game has ended"
-    return ResponseEntity.status(HttpStatus.FORBIDDEN).headers(httpHeaders).body(errorTemplate)
+    errorTemplate.data.attributes.code = "400"
+    errorTemplate.data.attributes.description = "400 BAD REQUEST: game has ended"
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).headers(httpHeaders).body(errorTemplate)
 }
 
 fun positiveFrameDeletionResponse() : ResponseEntity<Any>{
@@ -65,15 +65,21 @@ fun positiveFrameDeletionResponse() : ResponseEntity<Any>{
 fun negativeFrameDeletionResponseNOTLAST(id: String) : ResponseEntity<Any>{
     val httpHeaders = HttpHeaders()
     val errorTemplate = ErrorTemplate()
-    errorTemplate.data.attributes.code = "403"
-    errorTemplate.data.attributes.description = "403 FORBIDDEN: frame with ID $id is not the last one"
-    return ResponseEntity.status(HttpStatus.FORBIDDEN).headers(httpHeaders).body(errorTemplate)
+    errorTemplate.data.attributes.code = "400"
+    errorTemplate.data.attributes.description = "400 BAD REQUEST: frame with ID $id is not the last one"
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).headers(httpHeaders).body(errorTemplate)
 }
 
-fun negativeFrameDeletionResponseNOTFOUND(id: String) : ResponseEntity<Any>{
+fun negativeFrameDeletionResponseNOTFOUND(id: String) : ResponseEntity<Any> {
     val httpHeaders = HttpHeaders()
     val errorTemplate = ErrorTemplate()
     errorTemplate.data.attributes.code = "404"
     errorTemplate.data.attributes.description = "404 NOT FOUND: frame with ID $id not found"
     return ResponseEntity.status(HttpStatus.NOT_FOUND).headers(httpHeaders).body(errorTemplate)
+}
+
+fun positiveFrameCreationResponse(frameJson: FrameJson) : ResponseEntity<Any> {
+    val httpHeaders = HttpHeaders()
+    httpHeaders.add("description", "201 CREATED: roll correctly acquired")
+    return ResponseEntity.status(HttpStatus.CREATED).headers(httpHeaders).body(frameJson)
 }
